Добавлены классы для связи one_to_many User и Order сущности
